[crp] FEATBL-1998 Feat: only consider topics belonging to the configured forest (defaults to default-forest, override with -Dbm.crp.stream.forest-id=foo)